   TLS options have been enabled, the default is now to enable the
   TLS listener.  Otherwise, the plaintext listener is enabled.
   Previously, the default was to use both a plaintext and TLS listener.

 * Fixed a problem with AIX authentication when validating the
   password of Kerberos users not present in /etc/security/passwd.

What's new in Sudo 1.9.17p2

 * Fixed a bug introduced in sudo 1.9.16 that could result in sudo
   sending SIGHUP to all processes on the system in certain rare
   cases.  The bug could manifest if sudo is running a command in
   a pseudo-terminal, sudo terminates the command due to an internal
   error, and the user's terminal is revoked.  GitHub issue #458.

 * Fixed a bug introduced in sudo 1.9.12 that caused sudo to abort
   when the "intercept" and "intercept_verify" options are enabled
   in sudoers and either the command line arguments or the environment
   contains a string larger than the page size (usually 4096).  This
   only Linux affects systems that support the ptrace_readv_string()
   function.  GitHub issue #453.

 * Fixed a bug in sudo's configure script introduced in sudo 1.9.17
   that prevented mdoc-format man pages from being used on systems
   without the mandoc utility.  Bug #1077.

What's new in Sudo 1.9.17p1

 * Fixed CVE-2025-32462.  Sudo's -h (--host) option could be specified
   when running a command or editing a file.  This could enable a
   local privilege escalation attack if the sudoers file allows the
   user to run commands on a different host.

 * Fixed CVE-2025-32463.  An attacker can leverage sudo's -R
   (--chroot) option to run arbitrary commands as root, even if
   they are not listed in the sudoers file.  The chroot support has
   been deprecated an will be removed entirely in a future release.

What's new in Sudo 1.9.17

 * Sudo now uses the NODEV macro consistently. Bug #1074.

 * Fixed a bug where the "ALL" command in a sudoers rule would